# kakeibo_app

./: README.md  pyproject.toml
kakeibo_app/: app.py  config.py  util.py
kakeibo_app/templates/: base.html  extra_item_delete.html  extra_item_detail.html  extra_item_edit.html  extra_item_register.html  index.html  item_delete.html  item_detail.html  item_edit.html  item_register.html  line_graph.html  service_delete.html  service_detail.html  service_edit.html  service_register.html
